chat-frontend/src/pages/chat/chat.css
.chatGrid {
    height: 90%;
    width: auto;
}


#searchBarContainer {
    display: flex;
    height: 10vh;
    align-items: center;
    width: 100%;
    padding-left: 50px;
}

#searchResultContainer {
    border-top: 1px dotted black;
    height: 80vh;
    padding-left: 50px;
}

#chatSearchButton {
    padding-left: 30px;
}

.chat-search-result-element{
    padding: 10px;
}

.chatOwnMessage,
.chatRecivedMessage {
    width: auto;
    max-width: 130px;
    padding: 5px;
    text-align: left;

    
    height: auto;
}

.chatOwnMessage {
    border: 2px solid green;
    margin-right: 4px;
    border-radius: 8px 8px 0px 8px;
}

.chatRecivedMessage {
    position: relative;
    
    border: 2px solid red;
    margin-left: 35px;
    border-radius: 8px 8px 8px 0px;
}


.chatOwnMessageWrapper,
.chatMessageWrapper {
    margin-top: 30px;

}
  

.owenMessageContainer{
    display: flex;
    flex-direction: row-reverse;
}

.messageContentContainer{
    display: flex;
    flex-direction: row;
}

.messageContainer{
    display: flex;
    position: relative;
    left: 10px;
    align-items: center;
}

.chatOwnMessageWrapper{
    position: relative;
    max-width: 295px;
    width: auto;
}

.chatMessageWrapper {
    position: relative;
    max-width: 300px;
    width: auto;
}

.owenChatEmoji{
    position: absolute;
    right: 5px;
    bottom: -15px;
    max-width: 70px;
    min-width: 20px;
    height: 20px;
    background-color: azure;
    border-radius: 8px;
    display: flex;
}

.chatEmoji{
    position: absolute;
    bottom: -15px;
    right: -5px;
    max-width: 70px;
    min-width: 20px;
    height: 20px;
    background-color: azure;
    border-radius: 8px;
    display: flex;
}

.chatEmojiContent{
    margin-right: -3px;
    font-size: 15px;
}

.addEmoji{
    position: absolute;
    left: 110%;
}

.addEmojiIcon{
    width: 15px;
    height: 15px;
}

.chatuserIcon{
    width: 30px;
    height: 30px;
}

.chatuserIcon {
    position: absolute;
    top: 80%;
    left:0;
    margin-left: 5px;
}

.ownChatuserIcon {
    margin-right: 5px;

}

.allChatContentDiv {
    width: auto;
    height: 40px;
    display: flex;
    flex-direction: row;
    padding-left: 10px;
    text-align: center;
    align-items: center;
}

.allChatContentDiv:hover {
    background-color: rgb(223, 222, 222);
}

#chatboxRoot {
    width: 100%;
    height: 40px;
    position: relative;
}

.chat-box {
    position: fixed; 
    bottom: 0; 
    left: 80%;
    height: 420px; 
    width: 300px; 
    background-color: rgb(156, 156, 241);
    border-top-left-radius: 8px;
    box-shadow: -2px 0px 3px rgba(0, 0, 0, 0.2),
                2px 0px 3px rgba(0, 0, 0, 0.2),  
                0px -2px 3px rgba(0, 0, 0, 0.2); 
}

#allChatContainer {
    min-height: 50vh;
    border-top: 1px dotted black;
    position: relative;
    top: 50%;
    overflow-y: auto;
}


.onlineChatCloseIcon {
    width: 18px;
    height: 18px;
}

.onlineChatMinusIcon{
    width: 20px;
    height: 20px;
}

.chat-box-toggle-element{
    padding: 5px;
}

.chat-box-header {
    display: flex;
    justify-content: space-between;
    height: 50px;
    align-items: center;
}

.chat-box-header-elements, .chat-box-toggle{
    padding: 5px;
}

.chat-box-body {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
}

.chat-box-overlay {
    display: flex;
    flex-direction: column;
    height: 320px;
    width: 300px;
    background-color: white;
    overflow-y:scroll;
}

.chat-box-overlay::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
}

.chat-box-overlay::-webkit-scrollbar
{
	width: 5px;  
	background-color: #F5F5F5;
}

.chat-box-overlay::-webkit-scrollbar-thumb
{
	background-color: #5A5EB9;
}

.chat-input{
    width: auto;
    height: 40px;
    padding: 4px;
    display: flex;
    align-items: center;
    height: 45px;
    background-color: rgb(184, 179, 179);
}

.onlie-Chat-Input-Container{
    display: flex;
    border: none;
    border-radius: 8px;
    background-color: white;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.online-chat-send-Button-div {
    display: flex; 
    justify-content: center; 
    align-items: center; 
    margin-right: 5px;
    width: 30px;
    height: 30px;
}

.online-chat-send-Button-div:hover {
    background-color: rgb(214, 216, 231);
    border-radius: 20px;
}

.online-chat-icon {
    width: 20px;
    height: 20px;
}

/*tab css*/

/*#open-Message-Tab-Root{
    position: relative;
    left: 90vw;
}*/

.pending-chat-container{
    position: absolute;
    background-color: rgb(154, 154, 156);
    border-radius: 50px;
    height: 60px;
    width: 60px;
    left: 95vw;
    text-align: center;
    border-color: black;
    border:  1px solid;
    text-align: center;
}

